--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "dependencies": {
     "@tweenjs/tween.js": "^17.1.1",
     "axios": "^0.17.0",
+    "babylonjs": "^3.1.1",
     "config": "^1.27.0",
     "knex": "^0.13.0",
     "koa": "^2.3.0",
