--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chai-http": "^3.0.0",
     "chalk": "^2.1.0",
     "compression-webpack-plugin": "^1.0.1",
+    "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.28.7",
     "eslint": "^4.11.0",
     "eslint-config-vue": "^2.0.2",
@@ -58,7 +59,7 @@
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
   },
-  "dependencies": {    
+  "dependencies": {
     "axios": "^0.17.0",
     "babylonjs": "^3.1.1",
     "config": "^1.27.0",
